updated models db v1.1

--- a/Tasket/users/templates/index.html
+++ b/Tasket/users/templates/index.html
@@ -29,7 +29,8 @@
     </div>
     <p>Email: {{ user.email }}</p>
     <p>Должность: {{ user.role }}</p>
-    <p>Текущие проекты: {{ user.projects }}</p>
+    <p>Текущие проекты: {{ user.ongoing_projects }}</p>
+    <p>Текущие задания: {{ user.ongoing_tasks }}</p>
     <br>
     <br>
     {% endif %}
